﻿drkns 29.09.2015 21:44:11 +0200 - build 4429

1. С форума: "Что-то случилось с сообщениями при удалении сетевого диска после 4424"

2. В подтверждение отключения subst-диска добавлено отображение пути.

3. Пара мелочей.

drkns 29.09.2015 09:06:03 +0200 - build 4428

1. gcc build fix

2. Рефакторинг.

drkns 26.09.2015 21:44:35 +0200 - build 4427

1. 0003093: Не закрывается по нажатию Esc диалог "Диск" (Alt-F1,Alt-F2), если текущая папка в панели - UNC

2. Рефакторинг.

drkns 24.09.2015 22:50:09 +0200 - build 4426

1. Не теряем уже введённый текст при прокрутке истории в комстроке.

2. Рефакторинг.

3. Warnings.

drkns 23.09.2015 02:45:20 +0200 - build 4425

1. Рефакторинг.

drkns 21.09.2015 19:19:19 +0200 - build 4424

1. Уточнение 4423.1.

drkns 18.09.2015 22:40:33 +0200 - build 4423

1. Теперь мы умеем и //вот/такие/пути тоже.

2. GCC build fix

3. Рефакторинг.

drkns 17.09.2015 22:04:20 +0200 - build 4422

1. Рефакторинг.

drkns 17.09.2015 20:59:50 +0200 - build 4421

1. Уточнение и упрощение логики автообновления переменных окружения.

svs 17.09.2015 19:11:41 +0300 - build 4420

1. Уточнение build 4419 в соответствии с заложенной логикой (описано в хелпе)

svs 17.09.2015 19:04:05 +0300 - build 4419

1. Mantis#0003078: Редактор конфигурации *помечает некоторые параметры как изменённые даже в новом профиле
   Только про "System.CopyBufferSize".


svs 10.09.2015 10:31:11 +0300 - build 4418

1. Mantis#0003055: Отсутствие ID'а у "диалога удаления файлов", невозможность проверки.

    DeleteWipeId                     = {9C054039-5C7E-4B04-96CD-3585228C916F}  --> Dlg.Id
    Основной диалог уничтожения файлов/папок

    DeleteRecycleId                  = {85A5F779-A881-4B0B-ACEE-6D05653AE0EB}  --> Dlg.Id
    Основной диалог удаления файлов/папок в корзину

    DeleteFileFolderId               = {85A5F779-A881-4B0B-ACEE-6D05653AE0EB}  --> Dlg.Id
    Основной диалог удаления файлов/папок

    Дальше разнообразные предупреждения по теме удаления/уничтожения:
