@@ -1,4 +1,8 @@
-﻿drkns 29.09.2015 21:44:11 +0200 - build 4429
+﻿drkns 02.10.2015 09:36:40 +0200 - build 4430
+
+1. 0003080: Alternate editor/viewer in FindFile results: temporary files will be deleted on FindFile closing. This should give enough time for external editor to open temporary file.
+
+drkns 29.09.2015 21:44:11 +0200 - build 4429
 
 1. С форума: "Что-то случилось с сообщениями при удалении сетевого диска после 4424"
 
